Add file cache to avoid bussy hdd on first load